Fixing broken links and making small layout modifications (#152)
* fixing broken links, adding custom scrollbar colours, modifying page and menu layouts

* Responding to PR comments

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -42,3 +42,20 @@ $code-bg:#555555;
 /* Font color for inline code */
 $code-color: #ffffff;  
 
+  
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-color: #2a9fd6 #000000;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #000000;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #2a9fd6;
+    border: 3px solid #000000;
+  }
+
+
